--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -131,7 +131,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Confirmation of Mg/Ca ratios as palaeothermometers in Atlantic limpet shells},
-  pdfauthor={Niklas Hausmann; Donna Surge; Ivan Briz-Godino},
+  pdfauthor={Niklas Hausmann; Donna Surge; Ivan Briz i Godino},
   pdfkeywords={Sclerochronology, Patella, Nacella, LIBS, Mg/Ca},
   colorlinks=true,
   linkcolor={blue},
@@ -154,7 +154,7 @@ limpet shells}
 %
 }
 
-\author[3]{Ivan Briz-Godino%
+\author[3]{Ivan Briz i Godino%
 %
 }
 
@@ -182,16 +182,16 @@ ratios in Atlantic limpet shells to determine past sea surface
 temperatures (SST). While \emph{Patella depressa} along the Spanish
 shoreline has repeatedly produced reliable correlations between SST and
 Mg/Ca ratios, this relationship is not the case for other patelloid
-species. \emph{Patella vulgata}, \emph{Nacella deaureata}, and \emph{N.
+species. \emph{Patella vulgata}, \emph{Nacella deaurata}, and \emph{N.
 magellanica} have been studied using Mg/Ca ratios with mixed or contrary
 results. In this study, we present elemental maps of these three species
-together with oxygen isotope ratios (\$\delta\&\textsuperscript{18}O)
+together with oxygen isotope ratios (\(\delta\)\textsuperscript{18}O)
 that confirm a good relationship with SST. Our dataset also reassesses a
 specimen which was previously unsuccessful in providing significant
 correlations between \(\delta\)\textsuperscript{18}O values and Mg/Ca
 ratios. By reassessing these species and including modern and
 archaeological specimens (n=12) from three patelloid species (\emph{P.
-vulgata}, \emph{N. deaureata}, and \emph{N. magellanica}) we further add
+vulgata}, \emph{N. deaurata}, and \emph{N. magellanica}) we further add
 to the growing set of evidence for the reliable use of Mg/Ca ratios to
 detect palaeotemperature change. As a result, these species can in the
 future serve to determine ontogenetic age and season of capture as well
@@ -214,7 +214,8 @@ temperature minima and maxima) for the targeted analysis using
 
 Limpet shells are commonly found within archaeological sites and past
 shorelines due to their robust carbonate structure and the long-term use
-of limpets as a marine food source \citep{Robson2023-oz}. They have been
+of limpets as a marine food source
+\citep[\citet{Robson2023-oz}]{Alvarez2011-rm}. They have been
 successfully studied in the context of coastal subsistence economies and
 site occupation on seasonal
 \citep{Shackleton1973-ij, Parker2018-wf, Bosch2018-ud} or long-term
@@ -293,12 +294,12 @@ state of preservation did not allow them to be re-analysed.
 \fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2449}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1429}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1633}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2041}}@{}}
 \caption{Overview of the modern and archaeological limpet specimens
 analysed in this study.}\tabularnewline
 \toprule\noalign{}
@@ -335,8 +336,8 @@ Previous analyses
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Modern & \citep{Nicastro2020-ih} & \emph{N. deaureata} & Cambaceres Bay
-& ND-1016-3 & \(\delta\)\textsuperscript{18}O and
+Modern & \citep{Nicastro2020-ih} & \emph{N. deaurata} & Cambaceres Bay &
+ND-1016-3 & \(\delta\)\textsuperscript{18}O and
 \(\delta\)\textsuperscript{13}C \\
 & & & - Tierra del & ND-1016-4 & analysis \\
 & & \emph{N. magellanica} & Fuego (AR) & NM-1016-1 & \\
@@ -384,7 +385,7 @@ freshwater input with salinity values of 34.0 -- 34.5 psu
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-SSTs-1.pdf}
+\includegraphics{fig-SSTs-1.pdf}
 
 }
 
@@ -443,7 +444,7 @@ these locations.
 
 High-quality \(\delta\)\textsuperscript{18}O values were acquired from
 previous publications on \emph{P. vulgata}
-\citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
+\citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaurata} and \emph{N.
 magellanica} \citep{Nicastro2020-ih}, in which detailed descriptions of
 the methodology for the stable isotope analyses can be found. In short,
 all shells were sectioned along the maximum growth axis to expose the
@@ -458,7 +459,7 @@ Pee Dee Belemnite) standard.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.png}
+\includegraphics{fig-Nac_iso-1.png}
 
 }
 
@@ -482,7 +483,7 @@ reduced from more than a dozen of samples per year, to only around 7.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_iso-1.png}
+\includegraphics{fig-Pat_iso-1.png}
 
 }
 
@@ -538,7 +539,7 @@ entirely made of aragonite, this layer is very thin. \newline
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_LIBS-1.pdf}
+\includegraphics{fig-Pat_LIBS-1.pdf}
 
 }
 
@@ -583,7 +584,7 @@ be well aligned.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Comp-1.png}
+\includegraphics{fig-Pat_Comp-1.png}
 
 }
 
@@ -611,7 +612,7 @@ two proxies.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Corr-1.png}
+\includegraphics{fig-Pat_Corr-1.png}
 
 }
 
@@ -641,7 +642,7 @@ also mirrored in the inner layers (m-2) of specimens NM-1016-3
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_LIBS-1.pdf}
+\includegraphics{fig-Nac_LIBS-1.pdf}
 
 }
 
@@ -693,7 +694,7 @@ extremes.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Comp-1.png}
+\includegraphics{fig-Nac_Comp-1.png}
 
 }
 
@@ -705,25 +706,25 @@ specimens.}
 
 The \emph{Nacella} spp. specimens showed similarly clustered
 correlations, which interestingly were not grouped by species. In fact,
-specimens ND-1016-3 (\emph{Nacella deaureata)} and NM-1016-3 (\emph{N.
+specimens ND-1016-3 (\emph{Nacella deaurata)} and NM-1016-3 (\emph{N.
 magellanica}) are almost identical in their fitted equations
 (Figure~\ref{fig-Nac_Corr}). Both also share a high coefficient of
 determination (R\textsuperscript{2}) of 0.95 and 0.92 respectively, with
 the remaining specimens being somewhat lower (R\textsuperscript{2} =
 0.76 for ND-1016-4 and R\textsuperscript{2}=0.84 for NM-1016-3). The
 mean R\textsuperscript{2} value for each \emph{N.} species is 0.86 for
-\emph{N. deaureata} and 0.88 for \emph{N. magellanica}. Why two
-specimens of different species are so well aligned is not entirely
-certain and randomness cannot for now be ruled out. That said, since
-they both have a high R\textsuperscript{2} value, it might just be that
-they were both minimally affected by factors other than SST, including
-the sampling location of our line scans.
+\emph{N. deaurata} and 0.88 for \emph{N. magellanica}. Why two specimens
+of different species are so well aligned is not entirely certain and
+randomness cannot for now be ruled out. That said, since they both have
+a high R\textsuperscript{2} value, it might just be that they were both
+minimally affected by factors other than SST, including the sampling
+location of our line scans.
 
 \begin{figure}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Corr-1.png}
+\includegraphics{fig-Nac_Corr-1.png}
 
 }
 
@@ -741,7 +742,7 @@ increasing (spring/summer) and decreasing (autum/winter) SST were also
 visible in the line scans, albeit less straightforward than in the
 2D-data. Nevertheless, the resulting R\textsuperscript{2}-values for
 each species were high (\emph{P. vulgata mean
-R\textsuperscript{2}}=0.89, \emph{N. deaureata mean
+R\textsuperscript{2}}=0.89, \emph{N. deaurata mean
 R\textsuperscript{2}}=0.86\emph{, N. magellanica mean
 R\textsuperscript{2}}=0.88). These results are similar to previously
 published data on other \emph{Patella} species shells (Table
@@ -755,11 +756,12 @@ ratios in increments with rich organic contents \citep{Hausmann2019-fi}.
 \fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.3067}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2449}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1429}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1633}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2041}}@{}}
 \caption{Correlations of Mg/Ca ratios with
 \(\delta\)\textsuperscript{18}O values and SST found in other studies.
 Bold R\textsuperscript{2} values are interpreted as outliers. *
@@ -777,6 +779,7 @@ Specimen
 R\textsuperscript{2}
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Study
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 \end{minipage} \\
 \midrule\noalign{}
 \endfirsthead
@@ -791,42 +794,44 @@ Specimen
 R\textsuperscript{2}
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Study
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 \end{minipage} \\
 \midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
 \emph{P. depressa} & Northern Spain & LAN541 & 0.87 &
-\citep{Garcia-Escarzaga2021-ij} \\
-& & LAN545 & 0.86 & \\
-& & LAN554 & 0.78 & \\
-& & LAN559 & 0.82 & \\
-\emph{P. caerulea} & Croatia & ISTPC1 & 0.9 & \citep{Hausmann2019-fi} \\
-& & ISTPC2 & 0.84 & \\
-& Crete & AF1911A & 0.91 & \\
-& & AF3003A & 0.92 & \\
-& Israel & AKKPC2 & 0.96 & \\
-& & AKKPC3 & 0.89 & \\
-& & FRMPC1 & 0.84 & \\
-& & FRMPC2 & 0.96 & \\
-& Libya & MO31A & 0.83 & \\
-& & \textbf{MP64A} & \textbf{0.33} & \\
-& & MP67A & 0.96 & \\
-& & MP68A & 0.81 & \\
-& Malta & MA10 & 0.82 & \\
-& Tunisia & TUNPC1 & 0.81 & \\
-& & TUNPC2 & 0.78 & \\
-& Turkey & ANTPC1 & 0.95 & \\
-& & ANTPC2 & 0.93 & \\
-& & KIZPC1 & 0.94 & \\
-& & KIZPC2 & 0.86 & \\
+\citep{Garcia-Escarzaga2021-ij} & \\
+& & LAN545 & 0.86 & & \\
+& & LAN554 & 0.78 & & \\
+& & LAN559 & 0.82 & & \\
+\emph{P. caerulea} & Croatia & ISTPC1 & 0.9 & \citep{Hausmann2019-fi}
+& \\
+& & ISTPC2 & 0.84 & & \\
+& Crete & AF1911A & 0.91 & & \\
+& & AF3003A & 0.92 & & \\
+& Israel & AKKPC2 & 0.96 & & \\
+& & AKKPC3 & 0.89 & & \\
+& & FRMPC1 & 0.84 & & \\
+& & FRMPC2 & 0.96 & & \\
+& Libya & MO31A & 0.83 & & \\
+& & \textbf{MP64A} & \textbf{0.33} & & \\
+& & MP67A & 0.96 & & \\
+& & MP68A & 0.81 & & \\
+& Malta & MA10 & 0.82 & & \\
+& Tunisia & TUNPC1 & 0.81 & & \\
+& & TUNPC2 & 0.78 & & \\
+& Turkey & ANTPC1 & 0.95 & & \\
+& & ANTPC2 & 0.93 & & \\
+& & KIZPC1 & 0.94 & & \\
+& & KIZPC2 & 0.86 & & \\
 \emph{P. rustica} & Gibraltar & \textbf{JL1} & \textbf{0.02} &
-\citep{Ferguson2011-zl} \\
-& & JL2 & 0.8** & \\
-\emph{P. caerulea} & Gibraltar & JM00 & 0.69** & \\
-& & JM30 & 0.83** & \\
+\citep{Ferguson2011-zl} & \\
+& & JL2 & 0.8** & & \\
+\emph{P. caerulea} & Gibraltar & JM00 & 0.69** & & \\
+& & JM30 & 0.83** & & \\
 \emph{P. vulgata} & Orkney & ORK-LT5 & not reported, here 0.88 &
-\citep{Graniero2017-io} and this study \\
+\citep{Graniero2017-io} and this study & \\
 \end{longtable}
 
 \normalsize
@@ -855,7 +860,7 @@ well be possible.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Ferg-1.png}
+\includegraphics{fig-Ferg-1.png}
 
 }
 
@@ -885,7 +890,7 @@ alignment of both records and a resulting R\textsuperscript{2}-value of
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-ORK_sub-1.pdf}
+\includegraphics{fig-ORK_sub-1.pdf}
 
 }
 
@@ -920,7 +925,7 @@ between Mg/Ca ratios and SST.
 This study uses LIBS as a novel analytical tool to present
 high-resolution and 2D information on Mg/Ca concentrations in modern and
 archaeological patelloid shells and their relationship to sea surface
-temperature. The results for \emph{P. vulgata}, \emph{N. deaureata}, and
+temperature. The results for \emph{P. vulgata}, \emph{N. deaurata}, and
 \emph{N. magellanica} were consistently promising with mean
 R\textsuperscript{2} values of 0.89, 0.86, and 0.88 respectively.
 
@@ -949,7 +954,7 @@ climatic studies than previously possible.
 
 
 \renewcommand\refname{References}
-  \bibliography{bibliography.bib}
-
+ \bibliographystyle{spmpsci}
+\bibliography{bibliography}
 
 \end{document}
