--- a/Manuscript.qmd
+++ b/Manuscript.qmd
@@ -19,7 +19,7 @@ author:
         city: Chapel Hill, NC
         country: US
         postal-code: 27599-3315
-  - name: Ivan Briz-Godino
+  - name: Ivan Briz i Godino
     affiliations:
       - name: Department of Evolutionary Biology, Ecology and Environmental Science, Biodiversity Research Institute (IRBio), University of Barcelona
         address: Avinguda Diagonal, 643
@@ -27,7 +27,7 @@ author:
         country: Spain
         postal-code: 08028 
 abstract: |
-  This study provides a reassessment of Magnesium to Calcium (Mg/Ca) ratios in Atlantic limpet shells to determine past sea surface temperatures (SST). While *Patella depressa* along the Spanish shoreline has repeatedly produced reliable correlations between SST and Mg/Ca ratios, this relationship is not the case for other patelloid species. *Patella vulgata*, *Nacella deaureata*, and *N. magellanica* have been studied using Mg/Ca ratios with mixed or contrary results. In this study, we present elemental maps of these three species together with oxygen isotope ratios ($\delta&^18^O) that confirm a good relationship with SST. Our dataset also reassesses a specimen which was previously unsuccessful in providing significant correlations between $\delta$^18^O values and Mg/Ca ratios. By reassessing these species and including modern and archaeological specimens (n=12) from three patelloid species (*P. vulgata*, *N. deaureata*, and *N. magellanica*) we further add to the growing set of evidence for the reliable use of Mg/Ca ratios to detect palaeotemperature change. As a result, these species can in the future serve to determine ontogenetic age and season of capture as well as to reveal locations of interest within the growth record (i.e. annual temperature minima and maxima) for the targeted analysis using $\delta$^18^O and clumped isotope analysis.
+  This study provides a reassessment of Magnesium to Calcium (Mg/Ca) ratios in Atlantic limpet shells to determine past sea surface temperatures (SST). While *Patella depressa* along the Spanish shoreline has repeatedly produced reliable correlations between SST and Mg/Ca ratios, this relationship is not the case for other patelloid species. *Patella vulgata*, *Nacella deaurata*, and *N. magellanica* have been studied using Mg/Ca ratios with mixed or contrary results. In this study, we present elemental maps of these three species together with oxygen isotope ratios ($\delta$^18^O) that confirm a good relationship with SST. Our dataset also reassesses a specimen which was previously unsuccessful in providing significant correlations between $\delta$^18^O values and Mg/Ca ratios. By reassessing these species and including modern and archaeological specimens (n=12) from three patelloid species (*P. vulgata*, *N. deaurata*, and *N. magellanica*) we further add to the growing set of evidence for the reliable use of Mg/Ca ratios to detect palaeotemperature change. As a result, these species can in the future serve to determine ontogenetic age and season of capture as well as to reveal locations of interest within the growth record (i.e. annual temperature minima and maxima) for the targeted analysis using $\delta$^18^O and clumped isotope analysis.
 keywords: 
   - Sclerochronology
   - Patella
@@ -53,7 +53,7 @@ output:
 #| echo: FALSE
 #| message: FALSE
 #| warning: FALSE
-
+#knitr::opts_chunk$set(fig.path = "")
 knitr::opts_chunk$set(echo=FALSE,message = FALSE,warning = FALSE)
 # Packages
   pacman::p_load(
@@ -77,7 +77,7 @@ source("DTW_Script-update.R")
 D18O <- read_csv(here("data","D18O.csv")) %>% 
   mutate(period=case_when(startsWith(sampleID,"Q") ~ "Archaeological",TRUE ~ "Modern")) %>% 
   mutate(species = case_when(
-      startsWith(sampleID, "ND") ~ "Nacella deaureata",
+      startsWith(sampleID, "ND") ~ "Nacella deaurata",
       startsWith(sampleID, "NM") ~ "Nacella magellanica",
       TRUE ~ "Patella vulgata"
     ))
@@ -104,7 +104,7 @@ D18O <-   D18O %>% filter(sampleID %in% MgCa$sampleID)
 
 # Introduction {#Introduction}
 
-Limpet shells are commonly found within archaeological sites and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source [@Robson2023-oz]. They have been successfully studied in the context of coastal subsistence economies and site occupation on seasonal [@Shackleton1973-ij; @Parker2018-wf; @Bosch2018-ud] or long-term scales [@Ortiz2015-mr], as well as archives of palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change recorded in patelloid limpet shells largely relies on the measurement of $\delta$^18^O values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca) ratios [@Graniero2017-io; @Ferguson2011-zl], to have an alternative measure that potentially provides a more accurate SST estimate than $\delta$^18^O-values,as the latter proxy is affected by changes in the mixing of fresh- and saltwater. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
+Limpet shells are commonly found within archaeological sites and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source [@Alvarez2011-rm, @Robson2023-oz]. They have been successfully studied in the context of coastal subsistence economies and site occupation on seasonal [@Shackleton1973-ij; @Parker2018-wf; @Bosch2018-ud] or long-term scales [@Ortiz2015-mr], as well as archives of palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change recorded in patelloid limpet shells largely relies on the measurement of $\delta$^18^O values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca) ratios [@Graniero2017-io; @Ferguson2011-zl], to have an alternative measure that potentially provides a more accurate SST estimate than $\delta$^18^O-values,as the latter proxy is affected by changes in the mixing of fresh- and saltwater. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
 
 Problematically, links between Mg/Ca ratios and SST changes in many marine mollusc shells, including limpets, have shown to be unreliable [@Surge2008-ri; @Wanamaker2008-zl; @Schone2010-yl; @Freitas2012-tx; @Graniero2017-io; @Poulain2015-dg; @Vihtakari2017-wd]. This is particularly the case where there is little available additional information on metabolic processes, organic components of the shell matrix, intra-increment and intra-shell variability, and growth rates, which can independently and unpredictably affect Mg/Ca ratios and confound their interpretation as a temperature proxy. Confusingly, in some cases multiple different temperature equations have been found for the same species (see Freitas *et al*. [-@Freitas2012-tx] and Vihtakari *et al*. [-@Vihtakari2017-wd] and references therein). Coeval specimens sharing one locality can also show differences in their relation to SST [@Hausmann2019-fi]. Where the use of Mg/Ca ratios as a palaeotemperature proxy was successful, anomalous patterns in some specimens had to be filtered out by hand, reducing the overall robustness of the results of those successful studies [@Ferguson2011-zl].
 
@@ -151,8 +151,8 @@ CamBayMax <- SST_df %>% filter(dataset=="Cambaceres Bay - Tierra del Fuego") %>%
 \fontsize{8pt}{8pt}\selectfont
 
 | Context        | Study              | Species          | Location        | Sample ID  | Previous analyses                     |
-|------------|------------|------------|------------|------------|------------|
-| Modern         | [@Nicastro2020-ih] | *N. deaureata*   | Cambaceres Bay  | ND-1016-3  | $\delta$^18^O and $\delta$^13^C |
+|------|------------|-------|--------|------|----------|
+| Modern         | [@Nicastro2020-ih] | *N. deaurata*   | Cambaceres Bay  | ND-1016-3  | $\delta$^18^O and $\delta$^13^C |
 |                |                    |                  | \- Tierra del   | ND-1016-4  | analysis                              |
 |                |                    | *N. magellanica* | Fuego (AR)      | NM-1016-1  |                                       |
 |                |                    |                  |                 | NM-1016-3  |                                       |
@@ -218,7 +218,7 @@ Using this system we carried out elemental imaging of the shell specimens at a r
 
 ### Oxygen isotope ratios
 
-High-quality $\delta$^18^O values were acquired from previous publications on *P. vulgata* [@Surge2012-ba; @Graniero2017-io], *N. deaureata* and *N. magellanica* [@Nicastro2020-ih], in which detailed descriptions of the methodology for the stable isotope analyses can be found. In short, all shells were sectioned along the maximum growth axis to expose the internal growth structure. From the exposed section carbonate powder samples were acquired using a micromill with resolutions of 100–200 µm and by targeting the calcitic M+2 layer of the shells. Analytical precision of the isotope ratios was consistently at 0.05–0.10‰ and values are reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee Belemnite) standard.
+High-quality $\delta$^18^O values were acquired from previous publications on *P. vulgata* [@Surge2012-ba; @Graniero2017-io], *N. deaurata* and *N. magellanica* [@Nicastro2020-ih], in which detailed descriptions of the methodology for the stable isotope analyses can be found. In short, all shells were sectioned along the maximum growth axis to expose the internal growth structure. From the exposed section carbonate powder samples were acquired using a micromill with resolutions of 100–200 µm and by targeting the calcitic M+2 layer of the shells. Analytical precision of the isotope ratios was consistently at 0.05–0.10‰ and values are reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee Belemnite) standard.
 
 ```{r Nacella_Isotope_plot,dev='png',dpi=300}
 #| fig-cap: Isotope values of *Nacella* spp. limpet shells from Cambaceres Bay.
@@ -350,7 +350,7 @@ for (sample in Samples) {
 
 ## *Patella vulgata*
 
-The elemental imaging of *P. vulgata* shells consistently showed repeating patterns of Mg/Ca intensity ratio changes with high Mg/Ca intensity ratios indicating high temperature periods and low ratios indicating low temperature periods. As examples, @fig-Pat_LIBS shows the 2D-distribution of elemental ratios across the entire section of ORK-LT5 and the preserved anterior side of QG1-7188-1 (additional maps can be found in the supplementaries). The repeating patterns are found across the calcitic layers that are exterior to the myostracum (layers m+2 and m+3) as well as the layers that are interior (m-2)(see Fenger et al. [-@Fenger2007-gf] for a detailed explanations of microstructural layers in *P. vulgaata*). The layer m-1, which is also interior, consists of aragonite and is seen in @fig-Pat_LIBS in grey, as its Mg/Ca intensity ratio consistently falls below the range of interest (0.2 and above). Compared to other patelloid shells, some of whose interior is almost entirely made of aragonite, this layer is very thin. \newline
+The elemental imaging of *P. vulgata* shells consistently showed repeating patterns of Mg/Ca intensity ratio changes with high Mg/Ca intensity ratios indicating high temperature periods and low ratios indicating low temperature periods. As examples, @fig-Pat_LIBS shows the 2D-distribution of elemental ratios across the entire section of ORK-LT5 and the preserved anterior side of QG1-7188-1 (additional maps can be found in the supplementaries). The repeating patterns are found across the calcitic layers that are exterior to the myostracum (layers m+2 and m+3) as well as the layers that are interior (m-2)(see Fenger et al. [-@Fenger2007-gf] for a detailed explanations of microstructural layers in *P. vulgata*). The layer m-1, which is also interior, consists of aragonite and is seen in @fig-Pat_LIBS in grey, as its Mg/Ca intensity ratio consistently falls below the range of interest (0.2 and above). Compared to other patelloid shells, some of whose interior is almost entirely made of aragonite, this layer is very thin. \newline
 
 ```{r Patella_LIBS,fig.pos='H'}
 #| fig-cap: Example LIBS maps and line scans of analysed specimens. (*a+c*) ORK-LT and (*b*+*d*) QG1-7188-1.  Note that the ranges of Mg/Ca intensity ratios are not identical but are chosen arbitrarily to increase contrast. Areas in grey consist of low-Mg aragonite and fall outside the chosen colour-range.
@@ -453,7 +453,7 @@ maps/lines+plot_layout(heights=c(0.6,0.5))
 
 ```
 
-Both specimens in @fig-Pat_LIBS show increased Mg/Ca intensity ratios towards the outside of the shell and some degree of intra-increment variability. This is particularly visible in @fig-Pat_LIBS c, where Mg/Ca intensity ratios range from \~0.5–0.7 in the first year of growth (9–12 mm on the y-axis). A similar pattern is visible in the interior m-2 layer of ORK-LT5 (@fig-Pat_LIBS a), which increase towards the anterior of the shell (0–10 mm on the x-axis).
+Both specimens in @fig-Pat_LIBS show increased Mg/Ca intensity ratios towards the outside of the shell and some degree of intra-increment variability. This is particularly visible in @fig-Pat_LIBS b, where Mg/Ca intensity ratios range from \~0.5–0.7 in the first year of growth (9–12 mm on the y-axis). A similar pattern is visible in the interior m-2 layer of ORK-LT5 (@fig-Pat_LIBS a), which increase towards the anterior of the shell (0–10 mm on the x-axis).
 
 Line scans also indicate well the quasi-sinusoidal change of Mg/Ca intensity ratios expected based on the stable isotope data and elemental imaging. That said, some of the variability of Mg/Ca intensity ratios within one season such as the summer period of QG1-7188-1 between 0.5 and 2.0 mm distance to the shell edge (@fig-Pat_LIBS d), is visible in a more dramatic manner than it appears in the 2D image. This shows the downside of line-scanning as opposed to the broader milling approach used for the analysis of carbonate powder [@Ferguson2011-zl].
 
@@ -736,7 +736,7 @@ P4 <-
 
 ```
 
-The *Nacella* spp. specimens showed similarly clustered correlations, which interestingly were not grouped by species. In fact, specimens ND-1016-3 (*Nacella deaureata)* and NM-1016-3 (*N. magellanica*) are almost identical in their fitted equations (@fig-Nac_Corr). Both also share a high coefficient of determination (R^2^) of 0.95 and 0.92 respectively, with the remaining specimens being somewhat lower (R^2^ = 0.76 for ND-1016-4 and R^2^=0.84 for NM-1016-3). The mean R^2^ value for each *N.* species is 0.86 for *N. deaureata* and 0.88 for *N. magellanica*. Why two specimens of different species are so well aligned is not entirely certain and randomness cannot for now be ruled out. That said, since they both have a high R^2^ value, it might just be that they were both minimally affected by factors other than SST, including the sampling location of our line scans.
+The *Nacella* spp. specimens showed similarly clustered correlations, which interestingly were not grouped by species. In fact, specimens ND-1016-3 (*Nacella deaurata)* and NM-1016-3 (*N. magellanica*) are almost identical in their fitted equations (@fig-Nac_Corr). Both also share a high coefficient of determination (R^2^) of 0.95 and 0.92 respectively, with the remaining specimens being somewhat lower (R^2^ = 0.76 for ND-1016-4 and R^2^=0.84 for NM-1016-3). The mean R^2^ value for each *N.* species is 0.86 for *N. deaurata* and 0.88 for *N. magellanica*. Why two specimens of different species are so well aligned is not entirely certain and randomness cannot for now be ruled out. That said, since they both have a high R^2^ value, it might just be that they were both minimally affected by factors other than SST, including the sampling location of our line scans.
 
 ```{r Nacella_Correlation_Graphs,dev='png',dpi=300}
 #| fig-cap: Correlation graphs for *Nacella* spp. specimens
@@ -797,7 +797,7 @@ P_individual
 
 # Discussion {#Discussion}
 
-The Mg/Ca ratios from the 2D elemental imaging present positive results suggesting that SST is the main factor influencing variations in Mg/Ca ratios in three Atlantic limpet species. Annually repeating patterns of increasing (spring/summer) and decreasing (autum/winter) SST were also visible in the line scans, albeit less straightforward than in the 2D-data. Nevertheless, the resulting R^2^-values for each species were high (*P. vulgata mean R^2^*=0.89, *N. deaureata mean R^2^*=0.86*, N. magellanica mean R^2^*=0.88). These results are similar to previously published data on other *Patella* species shells (Table [2](#Table_2)): R^2^ values of *P. depressa* lie between 0.78 and 0.87 [@Garcia-Escarzaga2021-ij], for *P. caerulea* from the Mediterranean between 0.78 and 0.96 — barring one outlier of 0.33 (specimen MP64A), which had increased Mg/Ca ratios in increments with rich organic contents [@Hausmann2019-fi].
+The Mg/Ca ratios from the 2D elemental imaging present positive results suggesting that SST is the main factor influencing variations in Mg/Ca ratios in three Atlantic limpet species. Annually repeating patterns of increasing (spring/summer) and decreasing (autum/winter) SST were also visible in the line scans, albeit less straightforward than in the 2D-data. Nevertheless, the resulting R^2^-values for each species were high (*P. vulgata mean R^2^*=0.89, *N. deaurata mean R^2^*=0.86*, N. magellanica mean R^2^*=0.88). These results are similar to previously published data on other *Patella* species shells (Table [2](#Table_2)): R^2^ values of *P. depressa* lie between 0.78 and 0.87 [@Garcia-Escarzaga2021-ij], for *P. caerulea* from the Mediterranean between 0.78 and 0.96 — barring one outlier of 0.33 (specimen MP64A), which had increased Mg/Ca ratios in increments with rich organic contents [@Hausmann2019-fi].
 
 ::: {#Table_2}
 \fontsize{8pt}{8pt}\selectfont
@@ -967,11 +967,15 @@ We were not able to resample the *Nacella* spp. specimens in Graniero *et al.* [
 
 # Conclusion
 
-This study uses LIBS as a novel analytical tool to present high-resolution and 2D information on Mg/Ca concentrations in modern and archaeological patelloid shells and their relationship to sea surface temperature. The results for *P. vulgata*, *N. deaureata*, and *N. magellanica* were consistently promising with mean R^2^ values of 0.89, 0.86, and 0.88 respectively.
+This study uses LIBS as a novel analytical tool to present high-resolution and 2D information on Mg/Ca concentrations in modern and archaeological patelloid shells and their relationship to sea surface temperature. The results for *P. vulgata*, *N. deaurata*, and *N. magellanica* were consistently promising with mean R^2^ values of 0.89, 0.86, and 0.88 respectively.
 
 LIBS elemental imaging provided insight into elemental anomalies found particulary in the external parts (m+3 layer) of the shell, which introduce intra-incremental heterogeneity and which cannot be reconciled with modern SST changes or SST changes recorded in the $\delta$^18^O values of the same shells. Our 2D approach allowed us to avoid these areas of intra-increment heterogeneity and focus on areas that are predominantly controlled by changes in SST.
 
 These results are particularly promising for future analyses of patelloid shells for the study of season of collection in archaeological sites as well as the reconstruction of sub-annual climatic conditions in the past. Shells of the species studied here are widely available along the European Atlantic façade and the Argentinian coastline and make up a significant part of marine mollusc remains in archaeological sites of those regions [@Colonese2011-ab; @Villagran2011-ld; @Zangrando2016-yl]. By using LIBS as a screening tool for targeted \delta^{18}O analysis, focusing on annual minima and maxima revealed in the Mg/Ca record, researchers can improve cost and time efficiency. This novel method will enable them to increase sample numbers and produce larger, more in-depth climatic studies than previously possible.
+
+
+# Acknowledgements
+
 
 # References
 
