--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,14 +11,13 @@
   issn    = "0305-4403"
 }
 
-@misc{Hausmann_2024OSF,
+  @misc{Hausmann_Surge_Godino_2024,
   title={Confirmation of Mg/Ca ratios as palaeothermometers in Atlantic limpet shells},
   url={osf.io/jq9mx},
   DOI={10.17605/OSF.IO/JQ9MX},
   publisher={OSF},
-  author={Hausmann, Niklas},
-  year={2024},
-  month={Jul}
+  author={Hausmann, Niklas and Surge, Donna and Briz i Godino, Ivan},
+  year={2024}
 }
 
 @ARTICLE{Flohr2016-xs,
@@ -6088,7 +6087,7 @@
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
 @ARTICLE{Grigson1989-md,
-  title   = "￼The Camel in {Arabia-A} Direct Radiocarbon Date, Calibrated to
+  title   = "The Camel in {Arabia-A} Direct Radiocarbon Date, Calibrated to
              about 7000 {BC*}",
   author  = "Grigson, Caroline and Gowl, John A J and Zarins, Juris",
   journal = "J. Archaeol. Sci.",
