--- a/Manuscript.qmd
+++ b/Manuscript.qmd
@@ -82,7 +82,7 @@ D18O <- read_csv(here("data","D18O.csv")) %>%
   mutate(species = case_when(
       startsWith(sampleID, "ND") ~ "Nacella deaurata",
       startsWith(sampleID, "NM") ~ "Nacella magellanica",
-      TRUE ~ "Patella vulgata"
+      TRUE ~ "Patella vulgata"   
     ))
 
   
@@ -107,7 +107,7 @@ D18O <-   D18O %>% filter(sampleID %in% MgCa$sampleID)
 
 # Introduction {#Introduction}
 
-Limpet shells are commonly found within archaeological sites and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source [@Alvarez2011-rm, @Robson2023-oz]. They have been successfully studied in the context of coastal subsistence economies and site occupation on seasonal [@Shackleton1973-ij; @Parker2018-wf; @Bosch2018-ud] or long-term scales [@Ortiz2015-mr], as well as archives of palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change recorded in patelloid limpet shells largely relies on the measurement of $\delta$^18^O values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca) ratios [@Graniero2017-io; @Ferguson2011-zl], to have an alternative measure that potentially provides a more accurate SST estimate than $\delta$^18^O-values,as the latter proxy is affected by changes in the mixing of fresh- and saltwater. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
+Limpet shells are commonly found within archaeological sites and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source [@Alvarez2011-rm, @Robson2023-oz]. They have been successfully studied in the context of coastal subsistence economies and site occupation on seasonal [@Shackleton1973-ij; @Parker2018-wf; @Bosch2018-ud] or long-term scales [@Ortiz2015-mr], as well as archives of palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change recorded in patelloid limpet shells largely relies on the measurement of \$\\delta\$^18^O values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca) ratios [@Graniero2017-io; @Ferguson2011-zl], to have an alternative measure that potentially provides a more accurate SST estimate than \$\\delta\$^18^O-values,as the latter proxy is affected by changes in the mixing of fresh- and saltwater. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
 
 Problematically, links between Mg/Ca ratios and SST changes in many marine mollusc shells, including limpets, have shown to be unreliable [@Surge2008-ri; @Wanamaker2008-zl; @Schone2010-yl; @Freitas2012-tx; @Graniero2017-io; @Poulain2015-dg; @Vihtakari2017-wd]. This is particularly the case where there is little available additional information on metabolic processes, organic components of the shell matrix, intra-increment and intra-shell variability, and growth rates, which can independently and unpredictably affect Mg/Ca ratios and confound their interpretation as a temperature proxy. Confusingly, in some cases multiple different temperature equations have been found for the same species (see Freitas *et al*. [-@Freitas2012-tx] and Vihtakari *et al*. [-@Vihtakari2017-wd] and references therein). Coeval specimens sharing one locality can also show differences in their relation to SST [@Hausmann2019-fi]. Where the use of Mg/Ca ratios as a palaeotemperature proxy was successful, anomalous patterns in some specimens had to be filtered out by hand, reducing the overall robustness of the results of those successful studies [@Ferguson2011-zl].
 
@@ -154,19 +154,19 @@ CamBayMax <- SST_df %>% filter(dataset=="Cambaceres Bay - Tierra del Fuego") %>%
 \fontsize{8pt}{8pt}\selectfont
 
 | Context        | Study              | Species          | Location        | Sample ID  | Previous analyses                     |
-|------|------------|-------|--------|------|----------|
-| Modern         | [@Nicastro2020-ih] | *N. deaurata*   | Cambaceres Bay  | ND-1016-3  | $\delta$^18^O and $\delta$^13^C        |
+|------------|------------|------------|------------|------------|------------|
+| Modern         | [@Nicastro2020-ih] | *N. deaurata*    | Cambaceres Bay  | ND-1016-3  | \$\\delta\$^18^O and \$\\delta\$^13^C |
 |                |                    |                  | \- Tierra del   | ND-1016-4  | analysis                              |
 |                |                    | *N. magellanica* | Fuego (AR)      | NM-1016-1  |                                       |
 |                |                    |                  |                 | NM-1016-3  |                                       |
 |                |                    |                  |                 |            |                                       |
-|                | [@Graniero2017-io] | *P. vulgata*     | Rack Wick Bay - | ORK-LT5    | $\delta$^18^O and $\delta$^13^C       |
+|                | [@Graniero2017-io] | *P. vulgata*     | Rack Wick Bay - | ORK-LT5    | \$\\delta\$^18^O and \$\\delta\$^13^C |
 |                |                    |                  | Westray (UK)    |            | analysis;                             |
 |                |                    |                  |                 |            | Mg, Li, Sr, Ca.                       |
 |                |                    |                  |                 |            |                                       |
 |                |                    |                  |                 |            |                                       |
-| Archaeological | [@Surge2012-ba]    | *P. vulgata*     | Rack Wick Bay - | QG1-7188-1 | $\delta$^18^O and $\delta$^13^C       |
-|                |                    |                  | Westray (UK)    | QG1-7189-2 |       analysis                        |
+| Archaeological | [@Surge2012-ba]    | *P. vulgata*     | Rack Wick Bay - | QG1-7188-1 | \$\\delta\$^18^O and \$\\delta\$^13^C |
+|                |                    |                  | Westray (UK)    | QG1-7189-2 | analysis                              |
 |                |                    |                  |                 | QG2-1061-1 |                                       |
 |                |                    |                  |                 | QG2-1064-1 |                                       |
 |                |                    |                  |                 | QG2-7180-1 |                                       |
@@ -805,36 +805,36 @@ The Mg/Ca ratios from the 2D elemental imaging present positive results suggesti
 ::: {#Table_2}
 \fontsize{8pt}{8pt}\selectfont
 
-| Species       | Locality       | Specimen  | R^2^                    | Study                             |
-|------|------------|-------|--------|------|----------|
-| *P. depressa* | Northern Spain | LAN541    | 0.87                    | [@Garcia-Escarzaga2021-ij]        |
-|               |                | LAN545    | 0.86                    |                                   |
-|               |                | LAN554    | 0.78                    |                                   |
-|               |                | LAN559    | 0.82                    |                                   |
-| *P. caerulea* | Croatia        | ISTPC1    | 0.9                     | [@Hausmann2019-fi]                |
-|               |                | ISTPC2    | 0.84                    |                                   |
-|               | Crete          | AF1911A   | 0.91                    |                                   |
-|               |                | AF3003A   | 0.92                    |                                   |
-|               | Israel         | AKKPC2    | 0.96                    |                                   |
-|               |                | AKKPC3    | 0.89                    |                                   |
-|               |                | FRMPC1    | 0.84                    |                                   |
-|               |                | FRMPC2    | 0.96                    |                                   |
-|               | Libya          | MO31A     | 0.83                    |                                   |
-|               |                | **MP64A** | **0.33**                |                                   |
-|               |                | MP67A     | 0.96                    |                                   |
-|               |                | MP68A     | 0.81                    |                                   |
-|               | Malta          | MA10      | 0.82                    |                                   |
-|               | Tunisia        | TUNPC1    | 0.81                    |                                   |
-|               |                | TUNPC2    | 0.78                    |                                   |
-|               | Turkey         | ANTPC1    | 0.95                    |                                   |
-|               |                | ANTPC2    | 0.93                    |                                   |
-|               |                | KIZPC1    | 0.94                    |                                   |
-|               |                | KIZPC2    | 0.86                    |                                   |
-| *P. rustica*  | Gibraltar      | **JL1**   | **0.02**                | [@Ferguson2011-zl]                |
-|               |                | JL2       | 0.8\*\*                 |                                   |
-| *P. caerulea* | Gibraltar      | JM00      | 0.69\*\*                |                                   |
-|               |                | JM30      | 0.83\*\*                |                                   |
-| *P. vulgata*  | Orkney         | ORK-LT5   | not reported, here 0.88 | [@Graniero2017-io] and this study |
+| Species       | Locality       | Specimen  | R^2^                    | Study                             |     |
+|------------|------------|------------|------------|------------|------------|
+| *P. depressa* | Northern Spain | LAN541    | 0.87                    | [@Garcia-Escarzaga2021-ij]        |     |
+|               |                | LAN545    | 0.86                    |                                   |     |
+|               |                | LAN554    | 0.78                    |                                   |     |
+|               |                | LAN559    | 0.82                    |                                   |     |
+| *P. caerulea* | Croatia        | ISTPC1    | 0.9                     | [@Hausmann2019-fi]                |     |
+|               |                | ISTPC2    | 0.84                    |                                   |     |
+|               | Crete          | AF1911A   | 0.91                    |                                   |     |
+|               |                | AF3003A   | 0.92                    |                                   |     |
+|               | Israel         | AKKPC2    | 0.96                    |                                   |     |
+|               |                | AKKPC3    | 0.89                    |                                   |     |
+|               |                | FRMPC1    | 0.84                    |                                   |     |
+|               |                | FRMPC2    | 0.96                    |                                   |     |
+|               | Libya          | MO31A     | 0.83                    |                                   |     |
+|               |                | **MP64A** | **0.33**                |                                   |     |
+|               |                | MP67A     | 0.96                    |                                   |     |
+|               |                | MP68A     | 0.81                    |                                   |     |
+|               | Malta          | MA10      | 0.82                    |                                   |     |
+|               | Tunisia        | TUNPC1    | 0.81                    |                                   |     |
+|               |                | TUNPC2    | 0.78                    |                                   |     |
+|               | Turkey         | ANTPC1    | 0.95                    |                                   |     |
+|               |                | ANTPC2    | 0.93                    |                                   |     |
+|               |                | KIZPC1    | 0.94                    |                                   |     |
+|               |                | KIZPC2    | 0.86                    |                                   |     |
+| *P. rustica*  | Gibraltar      | **JL1**   | **0.02**                | [@Ferguson2011-zl]                |     |
+|               |                | JL2       | 0.8\*\*                 |                                   |     |
+| *P. caerulea* | Gibraltar      | JM00      | 0.69\*\*                |                                   |     |
+|               |                | JM30      | 0.83\*\*                |                                   |     |
+| *P. vulgata*  | Orkney         | ORK-LT5   | not reported, here 0.88 | [@Graniero2017-io] and this study |     |
 
 : Correlations of Mg/Ca ratios with $\delta$^18^O values and SST found in other studies. Bold R^2^ values are interpreted as outliers. \* indicates that only SST data and no other geochemical data was used. \*\* these samples were used to determine a shared R^2^-value of 0.79.
 :::
@@ -976,9 +976,7 @@ LIBS elemental imaging provided insight into elemental anomalies found particula
 
 These results are particularly promising for future analyses of patelloid shells for the study of season of collection in archaeological sites as well as the reconstruction of sub-annual climatic conditions in the past. Shells of the species studied here are widely available along the European Atlantic façade and the Argentinian coastline and make up a significant part of marine mollusc remains in archaeological sites of those regions [@Colonese2011-ab; @Villagran2011-ld; @Zangrando2016-yl]. By using LIBS as a screening tool for targeted $\delta$^18^O analysis, focusing on annual minima and maxima revealed in the Mg/Ca record, researchers can improve cost and time efficiency. This novel method will enable them to increase sample numbers and produce larger, more in-depth climatic studies than previously possible.
 
-
 # Acknowledgements
-
 
 # References
 
