--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12487,24 +12487,6 @@
   year    =  2013
 }
 
-@ARTICLE{Hausmann2019-mf,
-  title     = "Extensive elemental mapping unlocks Mg/Ca ratios as climate proxy
-               in seasonal records of Mediterranean limpets",
-  author    = "Hausmann, N and Prendergast, A L and Lemonis, A and Zech, J and
-               Roberts, P and Siozos, P and Anglos, D",
-  journal   = "Sci. Rep.",
-  publisher = "Springer Science and Business Media LLC",
-  volume    =  9,
-  number    =  1,
-  pages     =  3698,
-  month     =  mar,
-  year      =  2019,
-  doi       = "10.1038/s41598-019-39959-9",
-  pmc       = "PMC6403426",
-  pmid      =  30842602,
-  issn      = "2045-2322",
-  language  = "en"
-}
 
 @ARTICLE{Hausmann2015-rj,
   title     = "{CHAPTER} {TWENTY} {ONE} {RESULTS} {OF} {RECENTEXCAVATIONS} {ON}
@@ -58470,4 +58452,18 @@
   pmid      =  16794081,
   issn      = "0036-8075,1095-9203",
   language  = "en"
+}
+
+@article{gutiérrez-zugasti2017,
+	title = {Shell oxygen isotope values and sclerochronology of the limpet Patella vulgata Linnaeus 1758 from northern Iberia: Implications for the reconstruction of past seawater temperatures},
+	author = {{Gutiérrez-Zugasti}, Igor and {Suárez-Revilla}, Roberto and Clarke, Leon J. and {Schöne}, Bernd R. and Bailey, Geoffrey N. and {González-Morales}, M.R.},
+	year = {2017},
+	month = {06},
+	date = {2017-06},
+	journal = {Palaeogeography, Palaeoclimatology, Palaeoecology},
+	pages = {162--175},
+	volume = {475},
+	doi = {10.1016/j.palaeo.2017.03.018},
+	url = {http://dx.doi.org/10.1016/j.palaeo.2017.03.018},
+	langid = {en}
 }
